--- a/src/pages/iaccess/iaccess.css
+++ b/src/pages/iaccess/iaccess.css
@@ -5,3 +5,60 @@
 .iaccess h1 {
     color: var(--iYellow);
 }
+
+.iaccessCont {
+    background-color: var(--iWhite);
+}
+
+.iaccessTop {
+    position: relative;
+    padding-bottom: 35px;
+    padding-top: 8%;
+    display: flex;
+    justify-content: space-between;
+    z-index: 1;
+    min-height: 300px;
+}
+
+.iaccessCont p {
+    max-width: 55%;
+    font-family: var(--iPrimary);
+    font-size: 1em;
+    font-weight: normal;
+    font-stretch: condensed;
+    font-style: normal;
+    line-height: 1.5em;
+    letter-spacing: normal;
+    text-align: left;
+    color: var(--iBlack);
+}
+
+.iaccessContTwo p {
+    max-width: 65%;
+}
+
+.iaccessTop img {
+    width: 40%;
+    position: absolute;
+    right: 0;
+    top: -15%;
+}
+
+.iaccessCont h2 {
+    font-family: var(--iPrimary);
+    font-size: 35px;
+    font-weight: 900;
+    text-transform: Uppercase;
+    font-stretch: condensed;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: normal;
+    text-align: left;
+    color: var(--iBlack);
+}
+
+@media only screen and (max-width:991px) {
+    .iaccessContTwo p {
+        max-width: 100%;
+    }
+}
