--- a/src/pages/terms/terms.css
+++ b/src/pages/terms/terms.css
@@ -6,3 +6,35 @@
     color: var(--iYellow);
     text-transform: uppercase;
 }
+
+.ptContainer {
+    padding-top: 80px;
+    background-image: linear-gradient(var(--iOrange) 45%, url('../../images/herobg.png'));
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.privCont {
+    margin: 0 auto;
+    padding: 90px 20px 60px;
+}
+
+.privCont p {
+    font-family: var(--iPrimary);
+    text-align: justify;
+    font-size: 17px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: var(--iBlack);
+}
+
+@media only screen and (min-width: 768px) {
+    .privCont {
+        max-width: 75%;
+    }
+
+}
