--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -29,22 +29,22 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    padding-inline-start: 0px;
 }
 
 .footLinks li {
     list-style: none;
+    min-height: 37px;
+    display: flex;
+    align-items: center;
 }
 
 .footLinks li a {
-    font-family: var(--iPrimary);
-    font-stretch: condensed;
-    text-transform: uppercase;
+    font: normal normal var(--iPrimary);
+    letter-spacing: 0px;
+    font-weight: 700;
     font-size: 14px;
-    font-weight: 900;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: left;
+    text-transform: uppercase;
     color: var(--iWhite);
 }
 
@@ -53,7 +53,7 @@
     font-stretch: condensed;
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 900;
+    font-weight: 400;
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
@@ -73,6 +73,23 @@
 .btn:hover,
 .btn:focus {
     color: var(--iOrange);
+}
+
+/* bot style */
+df-messenger {
+    --df-messenger-bot-message: var(--iBlue);
+    --df-messenger-button-titlebar-color: var(--iWhite);
+    --df-messenger-button-titlebar-font-color: var(--iPurple);
+    --df-messenger-chat-background-color: var(--iGray);
+    --df-messenger-font-color: var(--iWhite);
+    --df-messenger-send-icon: var(--iOrange);
+    --df-messenger-user-message: var(--iOrange);
+}
+
+@media only screen and (max-width: 991px) {
+    .myFooterIn {
+        background-image: linear-gradient(var(--iWhite) 25%, rgba(255, 255, 255, 0) 61%, var(--iBlack) 61%);
+    }
 }
 
 @media only screen and (max-width: 575px) {
