--- a/src/components/StoriesComp.css
+++ b/src/components/StoriesComp.css
@@ -4,14 +4,14 @@
 
 .storiesInnTop {
     padding: 30px 20px;
-    min-height: 200px;
+    min-height: 220px;
     background-color: var(--iWhite);
 }
 
 .storiesInnTop h3 {
     text-transform: uppercase;
-    font-weight: 900;
-    font-size: 2.2em;
+    font-weight: bold;
+    font-size: 2.5em;
     font-family: var(--iPrimary);
     color: var(--iBlack);
 }
@@ -40,8 +40,11 @@
 .storyLink {
     font-family: var(--iPrimary);
     font-size: 18px;
-    font-weight: 900;
+    font-weight: 700;
+    letter-spacing: 0px;
     text-decoration: none;
+    display: inline-block;
+    margin-top: 15px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1024px) {
@@ -70,7 +73,8 @@
     }
 
     .storiesInnTop h3 {
-        font-size: 1em;
+        font-size: 1.8em;
+        font-weight: bold;
     }
 }
 
@@ -80,16 +84,16 @@
     }
 
     .storiesInnTop h3 {
-        font-size: 0.7em;
+        font-size: 1.1em;
     }
 }
 
 @media only screen and (max-width: 424px) {
     .storiesInnTop {
-        min-height: 90px;
+        min-height: 100px;
     }
 
     .storiesInnTop h3 {
-        font-size: 1em;
+        font-size: 1.4em;
     }
 }
