--- a/src/components/TopNav.css
+++ b/src/components/TopNav.css
@@ -1,7 +1,7 @@
 .navLinks {
-    font-family: 'Helvetica',
-        sans-serif !important;
-    font-weight: 900;
+    font: normal normal var(--iPrimary);
+    letter-spacing: 0px;
+    font-weight: 700;
     font-size: 15px;
     text-transform: uppercase;
 }
