--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 .heroBanner {
     background-color: var(--iPurple);
 }
@@ -33,10 +29,7 @@
 .heroBanTop h1 {
     font-family: var(--iPrimary);
     font-size: 70px;
-    font-weight: 900;
-    font-stretch: condensed;
-    font-style: normal;
-    line-height: normal;
+    font-weight: 700;
     letter-spacing: 5.6px;
     text-align: left;
     color: var(--iWhite);
@@ -48,10 +41,7 @@
     font-family: var(--iPrimary);
     width: 100%;
     font-size: 18px;
-    font-weight: 500;
-    font-stretch: condensed;
-    font-style: normal;
-    line-height: normal;
+    font-weight: 400;
     letter-spacing: normal;
     text-align: left;
     color: var(--iWhite);
@@ -62,10 +52,7 @@
 .heroSpec {
     font-family: var(--iPrimary);
     font-size: 18px;
-    font-weight: 500;
-    font-stretch: condensed;
-    font-style: normal;
-    line-height: normal;
+    font-weight: 400;
     letter-spacing: normal;
     text-align: left;
     color: var(--iWhite);
@@ -93,11 +80,8 @@
 
 .heroBanTwo p {
     font-family: var(--iPrimary);
-    font-size: 1em;
-    font-weight: thin;
-    font-stretch: condensed;
-    font-style: normal;
-    line-height: normal;
+    font-size: 16px;
+    font-weight: bold;
     letter-spacing: normal;
     text-align: right;
     color: var(--iWhite);
@@ -116,11 +100,8 @@
 
 .heroBanTwo a {
     font-family: var(--iPrimary);
-    font-size: 1em;
-    font-weight: 900;
-    font-stretch: condensed;
-    font-style: normal;
-    line-height: normal;
+    font-size: 16px;
+    font-weight: 700;
     letter-spacing: normal;
     text-decoration: none;
 }
@@ -166,10 +147,11 @@
     font-family: var(--iPrimary);
     font-size: 102px;
     font-style: normal;
+    font-weight: 700;
     line-height: 0.96;
-    letter-spacing: normal;
+    letter-spacing: 0px;
     text-align: left;
-    text-transform: uppercase;
+    text-transform: initial;
 }
 
 .heroBtmCont h1 {
@@ -189,10 +171,7 @@
 .heroBtmCont p {
     font-family: var(--iPrimary);
     font-size: 26px;
-    font-weight: thin;
-    font-stretch: condensed;
-    font-style: normal;
-    line-height: normal;
+    font-weight: 200;
     letter-spacing: normal;
     text-align: left;
     color: var(--iWhite);
@@ -204,12 +183,10 @@
 }
 
 .headerNavs P {
-    max-width: 320px;
+    max-width: 250px;
     font-family: var(--iPrimary);
     color: var(--iWhite);
     font-size: 16px;
-    font-stretch: condensed;
-    font-style: normal;
     line-height: normal;
     letter-spacing: normal;
 }
@@ -217,7 +194,7 @@
 .headerNavs a {
     font-family: var(--iPrimary);
     font-size: 18px;
-    font-weight: 900;
+    font-weight: 700;
     font-stretch: condensed;
     font-style: normal;
     line-height: normal;
@@ -284,7 +261,7 @@
 .healthinfo a {
     font-family: var(--iPrimary);
     font-size: 18px;
-    font-weight: 900;
+    font-weight: 700;
     font-stretch: condensed;
     font-style: normal;
     line-height: normal;
@@ -303,7 +280,7 @@
     background-image: linear-gradient(var(--iOrange) 45%, var(--iWhite) 45%);
 }
 
-.storyLink {
+.homeSHolder a {
     color: var(--iPurple);
 }
 
@@ -317,6 +294,11 @@
 }
 
 .resourceInn {
+    width: 100%;
+    height: 50%;
+    cursor: pointer;
+    display: block;
+    text-decoration: none;
     background-color: var(--iBlack);
 }
 
@@ -327,7 +309,7 @@
 .resourceInnTop h3 {
     font-family: var(--iPrimary);
     font-size: 2.2em;
-    font-weight: 900;
+    font-weight: 700;
     font-stretch: condensed;
     font-style: normal;
     line-height: 1.14;
@@ -434,7 +416,15 @@
     }
 
     .speH {
-        font-size: 60px;
+        font-size: 45px;
+    }
+
+    .headerNavs {
+        justify-content: space-between;
+    }
+
+    .headerNavs P {
+        max-width: 45%;
     }
 
     .heroBanTwo>div {
@@ -477,11 +467,11 @@
     }
 
     .homeheads h1 {
-        font-size: 30px;
+        font-size: 35px;
     }
 
     .speH {
-        font-size: 60px;
+        font-size: 45px;
     }
 
     .heroBanTwo>div {
@@ -524,11 +514,11 @@
     }
 
     .homeheads h1 {
-        font-size: 25px;
+        font-size: 30px;
     }
 
     .speH {
-        font-size: 54px;
+        font-size: 45px;
     }
 
     .heroBanTwo>div {
@@ -536,7 +526,7 @@
     }
 
     .heroBtmCont p {
-        font-size: 20px;
+        font-size: 25px;
     }
 
     .newsLetter {
